--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -14,6 +14,6 @@ Change Password
     <div class="content" style="padding-top:3%">
     Your password is now changed.
     </div>
-   <div class="content done" style="padding-bottom:25%" > Click on <strong><a href='/'>Kitabe</a></strong> to continue your reading journey again !
+   <div class="content done" style="padding-bottom:25%" > Click on <strong><a href='/'>BookNest</a></strong> to continue your reading journey again !
     </div> 
 {% endblock main%}
