--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,9 +1,6 @@
 {% extends 'mainapp/layout.html' %}
 {% load i18n %}
 {% load static %}
-{% load account socialaccount %}
-{% get_providers as socialaccount_providers %}
-
 {% block title %}
 Sign Up
 {% endblock title %}
@@ -48,13 +45,10 @@ Sign Up
                 </div>
 
             </form>
-            <a href="{% provider_login_url 'google' %}"><button class="googlebutton"><i class="fa fa-google fa-x"
-                aria-hidden="true"></i> Sign Up With Google</button></a>
-
         </div>
         <div class="h-100 hidden-sm col-xl-4 img-block mw-100" style="background-image : url('{% static "mainapp/png/BookSignIn.webp" %}')">
             <a class="btn-bot" href="{% url 'account_login' %}">SIGN IN</a>
         </div>
     </div>
 </div>
-{% endblock main %}
+{% endblock %}
