--- a/static/mainapp/css/layout.css
+++ b/static/mainapp/css/layout.css
@@ -226,6 +226,11 @@ footer a:hover {
         margin-bottom: 15px;
     }
 }
+
+a{
+    transition: color 0.2s ease;
+}
+
 .navbar-brand {
     font-family: Kaoly Demo;
     font-weight: bold;
